feat: both home about components working with json file

--- a/src/scss/components/_home-about-responsive.scss
+++ b/src/scss/components/_home-about-responsive.scss
@@ -64,6 +64,7 @@
             }
 
             .home-about-responsive-content {
+                padding-top: 5rem;
                 display: table;
                 width: 100%;
                 position: relative;
