--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -11,6 +11,8 @@ $desktop-menu-button-bar-height: 2px;
   z-index: $z-index-navbar;
   mix-blend-mode: difference;
   top: 0%;
+  display: flex;
+  align-items: center;
 
   //Disables blend mode so menu can get black
   @media (max-width: $layout-breakpoint-small) {
