--- a/src/scss/components/_hero-responsive.scss
+++ b/src/scss/components/_hero-responsive.scss
@@ -6,6 +6,7 @@
     top: 0;
     display: none;
     width: 100%;
+    height: 100%;
 
     @media (max-width: $layout-breakpoint-small) {
         display: block;
@@ -64,3 +65,77 @@
         }
     }
 }
+
+// .hero-responsive {
+//     overflow: hidden;
+//     z-index: 2;
+//     position: absolute;
+//     left: 0;
+//     top: 0;
+//     width: 100%;
+//     height: 100vh;
+//     display: none;
+
+//     @media (max-width: $layout-breakpoint-small) {
+//         display: block;
+//     }
+
+//     .hero-content {
+//         display: flex;
+//         flex-direction: row;
+//         align-items: center;
+//         position: absolute;
+//         height: 100%;
+//         width: 100%;
+//         padding-inline: $wrapper-value-breakpoint-small;
+//         background-color: transparent;
+//         backdrop-filter: blur(3px);
+
+//         .hero-content-container {
+//             height: auto;
+//             .hero-title {
+//                 font-weight: 600;
+//                 font-size: 7rem;
+//                 color: $white;
+
+//                 @media (max-width: $layout-breakpoint-xsmall) {
+//                     font-size: 5rem;
+//                 }
+//             }
+
+//             .professions {
+//                 padding-top: 10em;
+
+//                 .profession-text {
+//                     display: block;
+//                     font-weight: 600;
+//                     font-size: 3.5rem;
+//                     color: $white;
+//                     letter-spacing: 1px;
+
+//                     padding-bottom: 0.8em;
+
+//                     @media (max-width: $layout-breakpoint-xsmall) {
+//                         font-size: 3rem;
+//                     }
+//                 }
+//             }
+
+//             .scroll-down {
+//                 display: flex;
+//                 padding-top: 7em;
+//                 .scroll-down-text {
+//                     font-weight: 600;
+//                     font-size: 1.6rem;
+//                     color: $white;
+//                     padding-right: 0.3em;
+//                 }
+
+//                 .arrow-down-icon {
+//                     color: $white;
+//                     font-size: 1.8rem;
+//                 }
+//             }
+//         }
+//     }
+// }
