--- a/src/scss/components/_navbar-menu.scss
+++ b/src/scss/components/_navbar-menu.scss
@@ -69,11 +69,12 @@ $footer-menu-font-size: 1.6rem;
                             letter-spacing: 1px;
                             color: $white;
                             text-decoration: none;
-                            font-size: calc(clamp(4.5rem, 3vw, 7rem) * 0.875);
+                            font-size: calc(clamp(4rem, 3vw, 7rem) * 0.875);
                             transition: 0.3s ease-in-out;
                             cursor: pointer !important;
 
                             &.active::before {
+                                margin-top: 5px;
                                 content: "\2022";
                                 position: absolute;
                                 margin-left: -35px;
