--- a/src/scss/components/_image-modal.scss
+++ b/src/scss/components/_image-modal.scss
@@ -30,19 +30,22 @@
         position: absolute;
         top: 5rem;
         right: 5rem;
-        // box-shadow: 0 0px 50px -12px rgb(0 0 0 / 0.6);
-        // padding: 1.2rem;
         border: none;
         background-color: transparent;
         color: $black;
         cursor: pointer !important;
-        border-radius: 9999px;
 
         @media (max-width: $layout-breakpoint-small) {
-            top: 2.5rem;
-            right: 2.5rem;
+            width: 5rem;
+            height: 5rem;
+            top: 2.8rem;
+            right: 1.6rem;
+            box-shadow: 0 0px 50px -12px rgb(0 0 0 / 0.6);
+            padding: 1.3rem;
+            border-radius: 9999px;
+            background-color: $white;
+            display: flex;
+            align-items: center;
         }
     }
 }
-
-
