--- a/src/scss/components/_hero-responsive.scss
+++ b/src/scss/components/_hero-responsive.scss
@@ -12,17 +12,25 @@
         display: block;
     }
 
+    .react-parallax {
+        img {
+           margin-top: -10px;
+           margin-left: -10px;
+           width: 105vw !important;
+           object-fit: cover !important;
+        }
+    }
+
     .hero-container {
         height: 100vh;
         width: 100%;
         padding-inline: $wrapper-value-breakpoint-small;
         padding-top: 20vh;
         background-color: transparent;
-        backdrop-filter: blur(3px);
 
-        .hero-title {
+        .hero-title-responsive {
             font-weight: 600;
-            font-size: 7rem;
+            font-size: 6rem;
             color: $white;
 
             @media (max-width: $layout-breakpoint-xsmall) {
@@ -33,22 +41,22 @@
         .professions {
             padding-top: 10em;
 
-            .profession-text {
+            .profession-text-responsive {
                 display: block;
                 font-weight: 600;
-                font-size: 3.5rem;
+                font-size: 3rem;
                 color: $white;
                 letter-spacing: 1px;
-
-                padding-bottom: .8em;
+                height: 40px;
+                margin-bottom: .8em;
 
                 @media (max-width: $layout-breakpoint-xsmall) {
-                    font-size: 3rem;
+                    font-size: 2.5rem;
                 }
             }
         }
 
-        .scroll-down {
+        .scroll-down-responsive {
             display: flex;
             padding-top: 7em;
             .scroll-down-text {
@@ -66,76 +74,3 @@
     }
 }
 
-// .hero-responsive {
-//     overflow: hidden;
-//     z-index: 2;
-//     position: absolute;
-//     left: 0;
-//     top: 0;
-//     width: 100%;
-//     height: 100vh;
-//     display: none;
-
-//     @media (max-width: $layout-breakpoint-small) {
-//         display: block;
-//     }
-
-//     .hero-content {
-//         display: flex;
-//         flex-direction: row;
-//         align-items: center;
-//         position: absolute;
-//         height: 100%;
-//         width: 100%;
-//         padding-inline: $wrapper-value-breakpoint-small;
-//         background-color: transparent;
-//         backdrop-filter: blur(3px);
-
-//         .hero-content-container {
-//             height: auto;
-//             .hero-title {
-//                 font-weight: 600;
-//                 font-size: 7rem;
-//                 color: $white;
-
-//                 @media (max-width: $layout-breakpoint-xsmall) {
-//                     font-size: 5rem;
-//                 }
-//             }
-
-//             .professions {
-//                 padding-top: 10em;
-
-//                 .profession-text {
-//                     display: block;
-//                     font-weight: 600;
-//                     font-size: 3.5rem;
-//                     color: $white;
-//                     letter-spacing: 1px;
-
-//                     padding-bottom: 0.8em;
-
-//                     @media (max-width: $layout-breakpoint-xsmall) {
-//                         font-size: 3rem;
-//                     }
-//                 }
-//             }
-
-//             .scroll-down {
-//                 display: flex;
-//                 padding-top: 7em;
-//                 .scroll-down-text {
-//                     font-weight: 600;
-//                     font-size: 1.6rem;
-//                     color: $white;
-//                     padding-right: 0.3em;
-//                 }
-
-//                 .arrow-down-icon {
-//                     color: $white;
-//                     font-size: 1.8rem;
-//                 }
-//             }
-//         }
-//     }
-// }
