--- a/src/scss/components/_navbar-menu.scss
+++ b/src/scss/components/_navbar-menu.scss
@@ -16,11 +16,14 @@ $footer-menu-font-size: 1.6rem;
     background-color: $navbar-menu;
     z-index: $z-index-navmenu;
 
+    @media (max-width: $layout-breakpoint-small) {
+        overflow-y: scroll;
+    }
+
     .container {
         position: relative;
         flex-direction: row;
         height: 100%;
-        min-height: 650px;
         display: flex;
         align-items: center;
         margin-inline: $wrapper-value;
@@ -28,165 +31,166 @@ $footer-menu-font-size: 1.6rem;
         //Inherit padding inline from the navbar
         @media (max-width: $layout-breakpoint-small) {
             margin-inline: $wrapper-value-breakpoint-small;
-            flex-direction: column;
-            padding-top: 26vh;
         }
 
-        .navigation {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-column-gap: $card-spacing;
-            grid-row-gap: $card-spacing;
+        .menu {
             width: 100%;
+            height: auto;
 
-            @media (max-width: $layout-breakpoint-small) {
-                grid-template-columns: repeat(1, 1fr);
-            }
-
-            .nav-links {
+            .navigation {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-column-gap: $card-spacing;
+                grid-row-gap: $card-spacing;
                 width: 100%;
 
-                text-align: left;
+                @media (max-width: $layout-breakpoint-small) {
+                    grid-template-columns: repeat(1, 1fr);
+                }
 
-                .navlink-container {
-                    padding-bottom: 5.3em;
-                    cursor: pointer !important;
+                .nav-links {
+                    text-align: left;
 
-                    @media (max-width: $layout-breakpoint-small) {
-                        padding-bottom: 3.5em;
-                    }
+                    .navlink-container {
+                        width: auto;
+                        margin-bottom: 5.3em;
 
-                    //Disables padding on bottom for the last child
-                    &:last-child {
-                        padding-bottom: 0;
-                    }
+                        @media (max-width: $layout-breakpoint-small) {
+                            margin-bottom: 3.5em;
+                        }
 
-                    .navlink {
-                        display: block;
+                        //Disables padding on bottom for the last child
+                        &:last-child {
+                            margin-bottom: 0;
+                        }
 
-                        a {
-                            font-weight: 100;
-                            letter-spacing: 1px;
-                            color: $white;
-                            text-decoration: none;
-                            font-size: calc(clamp(4rem, 3vw, 7rem) * 0.875);
-                            transition: 0.3s ease-in-out;
-                            cursor: pointer !important;
+                        .navlink {
+                            width: auto;
+                            display: block;
 
-                            &.active::before {
-                                margin-top: 5px;
-                                content: "\2022";
-                                position: absolute;
-                                margin-left: -35px;
-                                font-size: calc(clamp(3rem, 7vw, 5rem) * 0.875);
+                            a {
+                                font-weight: 100;
+                                letter-spacing: 1px;
+                                color: $white;
+                                text-decoration: none;
+                                font-size: calc(clamp(4rem, 3vw, 7rem) * 0.875);
+                                transition: 0.3s ease-in-out;
+                                cursor: pointer !important;
 
-                                //Keeps the dot between the wrapper
-                                @media (max-width: $layout-breakpoint-small) {
-                                    right: $wrapper-value-breakpoint-small;
+                                &.active::before {
+                                    content: "\2022";
+                                    position: absolute;
+                                    margin-left: -35px;
+                                    font-size: calc(clamp(3rem, 7vw, 4.5rem) * 0.875);
+
+                                    //Keeps the dot between the wrapper
+                                    @media (max-width: $layout-breakpoint-small) {
+                                        right: $wrapper-value-breakpoint-small;
+                                        margin-top: 5px;
+                                    }
                                 }
-                            }
 
-                            &:hover {
-                                margin-left: 10px;
+                                &:hover {
+                                    margin-left: 10px;
+                                }
                             }
                         }
                     }
                 }
+
+                .menu-image {
+                    position: relative;
+                    width: 100%;
+                    height: 100%;
+                    justify-content: center;
+                    align-items: center;
+                    overflow: hidden;
+
+                    @media (max-width: $layout-breakpoint-small) {
+                        display: none;
+                    }
+
+                    .navigation-image {
+                        position: absolute;
+                        height: auto; /* Make sure images are scaled correctly. */
+                        width: 100%; /* Adhere to container width. */
+                        display: block;
+                        flex-shrink: 0;
+                        min-width: 100%;
+                        min-height: 100%;
+                        object-fit: cover;
+                    }
+                }
             }
 
-            .menu-image {
-                position: relative;
+            .menu-footer-divider {
+                margin-top: 12vh;
+                border: none !important;
                 width: 100%;
-                height: 100%;
-                justify-content: center;
+                height: 1px;
+                background-color: rgb(83, 83, 83);
+
+                @media (min-width: $layout-breakpoint-small) {
+                    display: none;
+                }
+            }
+
+            .menu-footer {
+                width: 100%;
+                position: absolute;
+                bottom: 7rem;
+                display: flex;
                 align-items: center;
-                overflow: hidden;
-                box-shadow: 0px 0px 50px -30px rgba(255,255,255,0.35);
+                justify-content: space-between;
 
                 @media (max-width: $layout-breakpoint-small) {
                     display: none;
                 }
 
-                .navigation-image {
-                    position: absolute;
-                    height: auto; /* Make sure images are scaled correctly. */
-                    width: 100%; /* Adhere to container width. */
-                    display: block;
-                    flex-shrink: 0;
-                    min-width: 100%;
-                    min-height: 100%;
-                    object-fit: cover;
+                .footer-email {
+                    a {
+                        text-decoration: none;
+                        font-size: $footer-menu-font-size;
+                        color: $white;
+                        letter-spacing: 1px;
+                        cursor: pointer !important;
+                    }
                 }
-            }
-        }
 
-        .menu-footer-divider {
-            margin-top: 12vh;
-            border: none !important;
-            width: 100%;
-            height: 1px;
-            background-color: rgb(83, 83, 83);
-
-            @media (min-width: $layout-breakpoint-small) {
-                display: none;
-            }
-        }
-
-        .menu-footer {
-            width: 100%;
-            position: absolute;
-            bottom: 7rem;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-
-            @media (max-width: $layout-breakpoint-small) {
-                display: none;
-            }
-
-            .footer-email {
-                a {
-                    text-decoration: none;
+                .footer-copyright {
+                    color: $white;
                     font-size: $footer-menu-font-size;
-                    color: $white;
                     letter-spacing: 1px;
-                    cursor: pointer !important;
+
+                    .footer-copyright-divider {
+                        padding-inline: 0.2vw;
+                        font-weight: 700;
+                    }
                 }
             }
 
-            .footer-copyright {
-                color: $white;
-                font-size: $footer-menu-font-size;
-                letter-spacing: 1px;
+            .menu-footer-responsive {
+                padding-top: 3vh;
+                width: 100%;
+                display: none;
 
-                .footer-copyright-divider {
-                    padding-inline: 0.2vw;
-                    font-weight: 700;
-                }
-            }
-        }
-
-        .menu-footer-responsive {
-            padding-top: 3vh;
-            width: 100%;
-            display: none;
-
-            @media (max-width: $layout-breakpoint-small) {
-                display: block;
-            }
-
-            .menu-footer-responsive-container {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-
-                .local-time-footer,
-                .footer-copyright-responsive {
-                    width: auto;
+                @media (max-width: $layout-breakpoint-small) {
                     display: block;
-                    font-size: 1.4rem;
-                    color: $white;
-                    letter-spacing: 0.5px;
+                }
+
+                .menu-footer-responsive-container {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+
+                    .local-time-footer,
+                    .footer-copyright-responsive {
+                        width: auto;
+                        display: block;
+                        font-size: 1.4rem;
+                        color: $white;
+                        letter-spacing: 0.5px;
+                    }
                 }
             }
         }
