--- a/src/scss/components/_home-about-normal.scss
+++ b/src/scss/components/_home-about-normal.scss
@@ -24,6 +24,7 @@ $layout-breakpoint-home-about: 1150px;
             .home-about-portrait {
                 width: 100%;
                 height: 100%;
+                min-height: 600px;
                 .potrait-container {
                     width: 100%;
                     height: 100%;
