--- a/src/scss/components/_home-about-normal.scss
+++ b/src/scss/components/_home-about-normal.scss
@@ -3,7 +3,7 @@ $layout-breakpoint-home-about: 1150px;
 .home-about-normal {
     display: block;
     width: 100%;
-    margin-block: 60vh;
+    margin-block: 40vh;
     visibility: hidden;
 
     @media (max-width: $layout-breakpoint-small) {
@@ -12,22 +12,22 @@ $layout-breakpoint-home-about: 1150px;
 
     .home-about-normal-container {
         .home-about-inner {
-            display: grid;
-            grid-template-columns: 45% 55%;
-            width: 100%;
-
-            @media (max-width: $layout-breakpoint-medium) {
-                grid-template-columns: 55% 45%;
-
-            }
+            display: flex;
+            flex-direction: row;
+            gap: 5rem;
 
             .home-about-portrait {
-                width: 100%;
-                height: 100%;
-                min-height: 600px;
+                width: 45%;
+
+                @media (max-width: $layout-breakpoint-medium) {
+                    width: 55%;
+                }
+
                 .potrait-container {
                     width: 100%;
                     height: 100%;
+                    min-height: 500px;
+                    max-height: 600px;
                     overflow: hidden;
 
                     .parallax-bg {
@@ -39,9 +39,12 @@ $layout-breakpoint-home-about: 1150px;
 
             .home-about-content {
                 display: table;
-                width: 100%;
+                width: 55%;
                 position: relative;
-                margin-inline: 15%;
+
+                @media (max-width: $layout-breakpoint-medium) {
+                    width: 45%;
+                }
 
                 .home-about-content-inner {
                     width: 100%;
@@ -61,27 +64,25 @@ $layout-breakpoint-home-about: 1150px;
                             line-height: 1.4;
                             overflow: hidden;
                             letter-spacing: 0px;
-
-                            .home-about-content-line-inner {
-                            }
                         }
                     }
 
                     .paragraphs {
-                        padding-block: 10em;
+                        padding-block: 5em;
 
                         @media (max-width: $layout-breakpoint-medium) {
                             padding-block: 2em;
                         }
 
                         .hero-content-paragraph {
+                            word-wrap: break-word;
                             max-width: 50ch;
                             padding-block: 0.6em;
                             line-height: 1.8;
                             font-weight: 300;
                             color: $text-color;
                             word-spacing: -1px;
-                            font-size: calc(clamp(1rem, 8vw, 2rem) * 0.875);
+                            font-size: calc(clamp(1rem, 8vw, 1.8rem) * 0.875);
 
                             @media (max-width: $layout-breakpoint-medium) {
                                 font-size: 1.6rem;
