--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -2,7 +2,7 @@
 .divider-text {
   color: grey;
   text-transform: uppercase;
-  font-size: 1.3rem;
+  font-size: calc(clamp(1.3rem, 3vw, 1.4rem) * 0.875);
   letter-spacing: 3px;
 
   &.category {
