--- a/src/scss/components/_hero-responsive.scss
+++ b/src/scss/components/_hero-responsive.scss
@@ -6,11 +6,14 @@
     top: 0;
     display: none;
     width: 100%;
-    height: 100%;
+    height: 125vh;
+
 
     @media (max-width: $layout-breakpoint-small) {
         display: block;
     }
+
+
 
     .react-parallax {
         img {
@@ -19,14 +22,15 @@
            width: 110vw !important;
            object-fit: cover !important;
         }
+
     }
 
     .hero-container {
-        height: 100vh;
+        height: 135vh;
         width: 100%;
         padding-inline: $wrapper-value-breakpoint-small;
         padding-top: 20vh;
-        background-color: transparent;
+
 
         .hero-title-responsive {
             font-weight: 600;
@@ -72,5 +76,23 @@
             }
         }
     }
+
+    .gradient-overlay-container {
+        left: 0;
+        top: 0;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        
+        .gradient-overlay {
+            position: absolute;
+            width: 100%;
+            height: 50%;
+            bottom: 0;
+            left: 0;
+            background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(255,255,255,1) 100%);
+        }
+    }
 }
+
 
