--- a/src/scss/pages/_photo-albums-page.scss
+++ b/src/scss/pages/_photo-albums-page.scss
@@ -17,29 +17,13 @@
                 .album-facts {
                     .album-title {
                         font-weight: 700;
-                        font-size: 4rem;
+                        font-size: calc(clamp(3rem, 3vw, 4rem) * 0.875);
                         letter-spacing: 1px;
-
-                        @media (max-width: $layout-breakpoint-medium) {
-                            font-size: 3.6rem;
-                        }
-
-                        @media (max-width: $layout-breakpoint-small) {
-                            font-size: 3.2rem;
-                        }
-
-                        @media (max-width: $layout-breakpoint-xsmall) {
-                            font-size: 3rem;
-                        }
                     }
                     h4 {
                         padding-top: 1em;
-                        font-size: 2.2em;
+                        font-size: calc(clamp(1.8rem, 3vw, 2.2rem) * 0.875);
                         font-weight: 500;
-
-                        @media (max-width: $layout-breakpoint-small) {
-                            font-size: 1.9em;
-                        }
                     }
                     .divider-text.category {
                         padding-top: 3em;
@@ -65,7 +49,6 @@
                     padding-block: 2em;
                     display: block;
                     width: 100%;
-                    // height: 100vh;
                     margin-left: auto;
                     margin-right: auto;
                 }
