--- a/src/scss/components/_navbar-menu.scss
+++ b/src/scss/components/_navbar-menu.scss
@@ -21,12 +21,13 @@ $footer-menu-font-size: 1.6rem;
     }
 
     .container {
+        margin-inline: $wrapper-value;
+        max-width: 1536px;
         position: relative;
         flex-direction: row;
         height: 100%;
         display: flex;
         align-items: center;
-        margin-inline: $wrapper-value;
 
         //Inherit padding inline from the navbar
         @media (max-width: $layout-breakpoint-small) {
@@ -34,9 +35,54 @@ $footer-menu-font-size: 1.6rem;
             margin-top: 5rem;
         }
 
+        @media (min-width: 1536px) {
+            margin-inline: auto;
+
+        }
+
         @media (min-width: $layout-breakpoint-small) {
             min-height: 700px;
+            margin-inline: $wrapper-value;
         }
+
+        .menu-image-position {
+            z-index: -1;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: end;
+            align-items: center;
+
+            .menu-image {
+                position: relative;
+                width: 55%;
+                height: 400px;
+                justify-content: center;
+                align-items: center;
+                overflow: hidden;
+    
+                @media (max-width: $layout-breakpoint-small) {
+                    display: none;
+                }
+    
+                .navigation-image {
+                    position: absolute;
+                    height: auto; /* Make sure images are scaled correctly. */
+                    width: 100%; /* Adhere to container width. */
+                    display: block;
+                    flex-shrink: 0;
+                    min-width: 100%;
+                    min-height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+        }
+
+
 
 
         .menu {
@@ -44,14 +90,10 @@ $footer-menu-font-size: 1.6rem;
             height: auto;
 
             .navigation {
-                display: grid;
-                grid-template-columns: repeat(2, 1fr);
-                grid-column-gap: $card-spacing;
-                grid-row-gap: $card-spacing;
-                width: 100%;
+                width: 45%;
 
                 @media (max-width: $layout-breakpoint-small) {
-                    grid-template-columns: repeat(1, 1fr);
+                    width: 100%;
                 }
 
                 .nav-links {
@@ -84,6 +126,7 @@ $footer-menu-font-size: 1.6rem;
                                 cursor: pointer !important;
 
                                 &.active::before {
+                                    margin-block: auto;
                                     content: "\2022";
                                     position: absolute;
                                     margin-left: -35px;
@@ -101,30 +144,6 @@ $footer-menu-font-size: 1.6rem;
                                 }
                             }
                         }
-                    }
-                }
-
-                .menu-image {
-                    position: relative;
-                    width: 100%;
-                    height: 100%;
-                    justify-content: center;
-                    align-items: center;
-                    overflow: hidden;
-
-                    @media (max-width: $layout-breakpoint-small) {
-                        display: none;
-                    }
-
-                    .navigation-image {
-                        position: absolute;
-                        height: auto; /* Make sure images are scaled correctly. */
-                        width: 100%; /* Adhere to container width. */
-                        display: block;
-                        flex-shrink: 0;
-                        min-width: 100%;
-                        min-height: 100%;
-                        object-fit: cover;
                     }
                 }
             }
