--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -33,7 +33,7 @@
 
             .about-banner {
                 width: 100%;
-                height: 100vh;
+                height: 700px;
                 object-fit: cover;
 
                 @media (max-width: $layout-breakpoint-small) {
@@ -107,7 +107,7 @@
 
                         .portrait-two {
                             width: 100%;
-                            height: 80vh;
+                            height: 700px;
                             object-fit: cover;
                         }
                     }
