--- a/src/scss/components/_navbar-menu.scss
+++ b/src/scss/components/_navbar-menu.scss
@@ -53,7 +53,7 @@ $footer-menu-font-size: 1.6rem;
             width: 100%;
             height: 100%;
             display: flex;
-            justify-content: end;
+            justify-content: flex-end;
             align-items: center;
 
             .menu-image {
