fix: small styling changes on phone and added image field to about partiall

--- a/src/scss/components/_footer-normal.scss
+++ b/src/scss/components/_footer-normal.scss
@@ -43,6 +43,7 @@
                         padding-block: 2rem;
 
                         a {
+                            cursor: pointer !important;
                             margin-bottom: 2rem;
                             display: flex;
                             align-items: center;
