--- a/src/scss/pages/_portfolio.scss
+++ b/src/scss/pages/_portfolio.scss
@@ -42,7 +42,6 @@
                     @media (max-width: $layout-breakpoint-small) {
                         padding-bottom: 1em;
                     }
-                    
 
                     &:hover {
                         color: black;
@@ -63,10 +62,12 @@
                 }
             }
         }
+
         .gallery {
             padding-bottom: 10vh;
             columns: 3;
             column-gap: 2rem;
+            row-gap: 10rem;
             width: 100%;
 
             @media (max-width: $layout-breakpoint-small) {
@@ -75,41 +76,65 @@
             }
 
             .gallery-image {
-                .image {
-                    width: 100%;
-                    margin-bottom: 2em;
-                    transition: 0.5s cubic-bezier(0.25, 0.11, 0.34, 1);
+                width: 100%;
+                height: 100%;
 
-                    @media (max-width: $layout-breakpoint-xsmall) {
-                        margin-bottom: 1.5em;
-                    }
+                margin-bottom: 2em;
+
+                .image-container {
+                    transform: translateY(1px);
+                    overflow: hidden;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    position: relative;
+                    width: 100%;
+                    height: 100%;
 
                     &:hover {
-                        filter: brightness(0.6);
                         cursor: pointer;
+                        .hover-icon {
+                            opacity: 1;
+                            transform: scale(1);
+                        }
+
+                        .image {
+                            transform: scale(1.01);
+                            filter: blur(1px) brightness(.7);
+                        }
+
+                    }
+
+                    .hover-icon {
+                        z-index: 10;
+                        position: absolute;
+                        color: white;
+                        mix-blend-mode: exclusion;
+                        width: 3.5rem;
+                        height: 3.5rem;
+                        cursor: pointer;
+                        opacity: 0;
+                        transform: scale(.9);
+                        transition: .5s ease-in-out;
+                    }
+
+                    .image {
+                        transform: translateY(-0px); /* Make sure image doesnt grow one pixel on transform scale */
+                        height: auto; /* Make sure images are scaled correctly. */
+                        width: 100%; /* Adhere to container width. */
+                        display: block;
+                        flex-shrink: 0;
+                        min-width: 100%;
+                        min-height: 100%;
+                        object-fit: cover;
+                        transition: .5s ease-in-out;
+
+                        @media (max-width: $layout-breakpoint-xsmall) {
+                            margin-bottom: 1.5em;
+                        }
                     }
                 }
             }
         }
     }
-}
-
-.item {
-    display: inline-block;
-    background: tomato;
-    padding: 5px;
-
-    line-height: 1.5;
-    color: white;
-    font-weight: bold;
-    font-size: 3em;
-}
-
-/*inline-block*/
-.inline-b {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-.inline-b-item {
-    display: inline-block;
 }
