--- a/src/scss/pages/_portfolio.scss
+++ b/src/scss/pages/_portfolio.scss
@@ -67,7 +67,6 @@
             padding-bottom: 10vh;
             columns: 3;
             column-gap: 2rem;
-            row-gap: 10rem;
             width: 100%;
 
             @media (max-width: $layout-breakpoint-small) {
@@ -75,11 +74,23 @@
                 column-gap: 1.5rem;
             }
 
+            @media (max-width: $layout-breakpoint-xsmall) {
+                columns: 1;
+            }
+
             .gallery-image {
                 width: 100%;
                 height: 100%;
+                margin-bottom: 2rem;
 
-                margin-bottom: 2em;
+                @media (max-width: $layout-breakpoint-small) {
+                    margin-bottom: 1.5em;
+                }
+
+                @media (max-width: $layout-breakpoint-xsmall) {
+                    margin-bottom: 1rem;
+                }
+ 
 
                 .image-container {
                     transform: translateY(1px);
@@ -119,7 +130,7 @@
                     }
 
                     .image {
-                        transform: translateY(-0px); /* Make sure image doesnt grow one pixel on transform scale */
+                        transform: translateY(-1px); /* Make sure image doesnt grow one pixel on transform scale */
                         height: auto; /* Make sure images are scaled correctly. */
                         width: 100%; /* Adhere to container width. */
                         display: block;
@@ -128,10 +139,6 @@
                         min-height: 100%;
                         object-fit: cover;
                         transition: .5s ease-in-out;
-
-                        @media (max-width: $layout-breakpoint-xsmall) {
-                            margin-bottom: 1.5em;
-                        }
                     }
                 }
             }
