--- a/src/scss/components/_photo-albums.scss
+++ b/src/scss/components/_photo-albums.scss
@@ -44,7 +44,9 @@ $card-spacing: 3vw;
                             }
 
                             .album-cover {
-                                transform: scale(1.025);
+                                @media (min-width: $layout-breakpoint-small) {
+                                    transform: scale(1.025);
+                                }
                             }
                         }
 
@@ -94,7 +96,7 @@ $card-spacing: 3vw;
                                 vertical-align: middle;
                                 position: relative;
                                 text-align: center;
-                                .album-cover-dot-text { 
+                                .album-cover-dot-text {
                                     z-index: 11;
                                     color: $white;
                                     font-size: 2.2rem;
@@ -115,7 +117,7 @@ $card-spacing: 3vw;
                                 width: 100%;
                                 height: 100%;
                                 object-fit: cover;
-                                transition: 0.5s cubic-bezier(.25,.11,.34,1);
+                                transition: 0.5s cubic-bezier(0.25, 0.11, 0.34, 1);
                             }
                         }
                     }
